Fix clear: removes everything. Remove horizontal scroll to fix offset drawing

--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -1,12 +1,12 @@
+html, body {
+    overflow: hidden; /* Remove scrollbars to prevent offset drawings */
+}
+
 .navbar a:hover, .dropdown:hover .dropbtn {
     background-color: gray;
 }
 
 .canvas-container{
-    /* position: relative; */
-    width: 500px;
-    height: 500px;
-    background-color: gray;
 }
 
 #canvas {
